List videos and delete admin action
